Update Basic Calculator VM.vcxproj

--- a/Basic Calculator VM/Basic Calculator VM.vcxproj
+++ b/Basic Calculator VM/Basic Calculator VM.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Basic Calculator VM.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="stack.cpp" />
   </ItemGroup>
   <ItemGroup>
